; ModuleID = '/home/carl/AnghaBench/ish/emu/extr_memory.c_pt_is_hole.c'
source_filename = "/home/carl/AnghaBench/ish/emu/extr_memory.c_pt_is_hole.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mem = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pt_is_hole(%struct.mem* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mem*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.mem* %0, %struct.mem** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i64, i64* %6, align 8
  store i64 %9, i64* %8, align 8
  br label %10

10:                                               ; preds = %23, %3
  %11 = load i64, i64* %8, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = add nsw i64 %12, %13
  %15 = icmp slt i64 %11, %14
  br i1 %15, label %16, label %26

16:                                               ; preds = %10
  %17 = load %struct.mem*, %struct.mem** %5, align 8
  %18 = load i64, i64* %8, align 8
  %19 = call i32* @mem_pt(%struct.mem* %17, i64 %18)
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %16
  store i32 0, i32* %4, align 4
  br label %27

22:                                               ; preds = %16
  br label %23

23:                                               ; preds = %22
  %24 = load i64, i64* %8, align 8
  %25 = add nsw i64 %24, 1
  store i64 %25, i64* %8, align 8
  br label %10

26:                                               ; preds = %10
  store i32 1, i32* %4, align 4
  br label %27

27:                                               ; preds = %26, %21
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32* @mem_pt(%struct.mem*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
